--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,30 @@
 {
-    "name": "kk14569/flarum-hubui-x",
-    "description": "A modern and soft theme designed by 14569 for Flarum.",
+    "name": "stezkoy/flarum-greenui-x",
+    "description": "A modern and soft theme designed by Stezkoy for Flarum. Fork flarum-hubui-x by kk14569",
     "type": "flarum-extension",
-    "version": "v1.1.6",
+    "version": "v2.2.2",
     "license": "GPL-3.0",
     "require": {
         "flarum/core": "^1.8.0"
     },
     "authors": [
         {
-            "name": "14569",
-            "email": "3754688512@qq.com",
+            "name": "Stezkoy",
+            "email": "stezko@gmail.com",
             "role": "Developer"
         }
     ],
     "support": {
-        "issues": "https://github.com/kk14569/flarum-hubui-x/issues",
-        "source": "https://github.com/kk14569/flarum-hubui-x",
-        "forum": "https://discuss.flarum.org/d/34823"
+        "issues": "https://github.com/Stezkoy/flarum-greenui-x/issues",
+        "source": "https://github.com/Stezkoy/flarum-greenui-x"
     },
     "extra": {
         "flarum-extension": {
-            "title": "HubUi-X",
+            "title": "GreenUi-X",
             "category": "theme",
             "icon": {
-                "name": "fas fa-th-large",
-                "backgroundColor": "#0076D4",
+                "name": "fas fa-tree",
+                "backgroundColor": "#00a185",
                 "color": "#fff"
             }
         }
